--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<span class="logo-bottom">Match</span>
 					</div>
 				</li>
-				<li class="navbar__item">
+				<li class="navbar__item active">
 					<a href="#">
 						<svg>
 							<use xlink:href="/fonts/symbol-defs.svg#i-about"></use>
@@ -47,5 +47,29 @@
 				</li>
 			</ul>
 		</nav>
+		<main class="instr">
+			<h1 class="h1">How to play?</h1>
+			<section class="instr__item">
+				<div class="instr__content">
+					<span class="instr__number">1</span>
+					<p class="instr__text">Register new player in game</p>
+				</div>
+				<img src="/img/instr-1.png" class="instr__img"></img>
+			</section>
+			<section class="instr__item">
+				<div class="instr__content">
+					<span class="instr__number">2</span>
+					<p class="instr__text">Configure your game settings</p>
+				</div>
+				<img src="/img/instr-2.png" class="instr__img"></img>
+			</section>
+			<section class="instr__item">
+				<div class="instr__content">
+					<span class="instr__number">3</span>
+					<p class="instr__text">Start your new game!</p>
+				</div>
+				<img src="/img/instr-3.png" class="instr__img"></img>
+			</section>
+		</main>
 	</body>
 </html>
