--- a/pages/game.html
+++ b/pages/game.html
@@ -18,7 +18,7 @@
 						<span class="logo-bottom">Match</span>
 					</div>
 				</li>
-				<li class="navbar__item active">
+				<li class="navbar__item">
 					<a href="#">
 						<svg>
 							<use xlink:href="/fonts/symbol-defs.svg#i-about"></use>
