configurations on page navigation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					</a>
 				</li>
 				<li class="navbar__item disabled">
-					<a href="#">
+					<a href="/pages/rank.html" >
 						<svg>
 							<use xlink:href="/fonts/symbol-defs.svg#i-star"></use>
 						</svg>
@@ -35,7 +35,7 @@
 					</a>
 				</li>
 				<li class="navbar__item">
-					<a href="#">
+					<a href="/pages/settings.html">
 						<svg>
 							<use xlink:href="/fonts/symbol-defs.svg#i-settings"></use>
 						</svg>
