--- a/pages/game.html
+++ b/pages/game.html
@@ -19,7 +19,7 @@
 					</div>
 				</li>
 				<li class="navbar__item">
-					<a href="#">
+					<a href="/index.html">
 						<svg>
 							<use xlink:href="/fonts/symbol-defs.svg#i-about"></use>
 						</svg>
@@ -27,7 +27,7 @@
 					</a>
 				</li>
 				<li class="navbar__item disabled">
-					<a href="#">
+					<a href="/pages/rank.html">
 						<svg>
 							<use xlink:href="/fonts/symbol-defs.svg#i-star"></use>
 						</svg>
@@ -35,7 +35,7 @@
 					</a>
 				</li>
 				<li class="navbar__item">
-					<a href="#">
+					<a href="/pages/settings.html">
 						<svg>
 							<use xlink:href="/fonts/symbol-defs.svg#i-settings"></use>
 						</svg>
@@ -43,7 +43,7 @@
 					</a>
 				</li>
 				<li class="navbar__item">
-					<a href="#" class="btn btn--ghost">Register New Player</a>
+					<a href="#" class="btn btn--ghost">Stop Game</a>
 				</li>
 			</ul>
 		</nav>
@@ -151,4 +151,6 @@
 			</div>
 		</main>
 	</body>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="/js/app.js"></script>
 </html>
