--- a/pages/settings.html
+++ b/pages/settings.html
@@ -19,15 +19,15 @@
 					</div>
 				</li>
 				<li class="navbar__item">
-					<a href="#">
+					<a href="/index.html">
 						<svg>
 							<use xlink:href="/fonts/symbol-defs.svg#i-about"></use>
 						</svg>
 						<h4>About Game</h4>
 					</a>
 				</li>
-				<li class="navbar__item">
-					<a href="#">
+				<li class="navbar__item disabled">
+					<a href="/pages/rank.html">
 						<svg>
 							<use xlink:href="/fonts/symbol-defs.svg#i-star"></use>
 						</svg>
@@ -43,7 +43,7 @@
 					</a>
 				</li>
 				<li class="navbar__item">
-					<a href="#" class="btn btn--ghost">Register New Player</a>
+					<a href="/pages/game.html" class="btn btn--ghost">Start Game</a>
 				</li>
 			</ul>
 		</nav>
@@ -67,4 +67,6 @@
 			</div>
 		</main>
 	</body>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="/js/app.js"></script>
 </html>
