card turning on click functionality

--- a/pages/game.html
+++ b/pages/game.html
@@ -51,7 +51,7 @@
 			<div class="game__container">
 				<div class="game__timer">00:01</div>
 				<div class="game__cards">
-					<div class="game__card turned correct">
+					<div class="game__card">
 						<div class="game__card--front">
               <img src="/img/mask.png" alt="Mask">
             </div>
@@ -67,7 +67,7 @@
               <img src="/img/animal-6.jpg" alt="Mask">
             </div>
 					</div>
-          <div class="game__card turned">
+          <div class="game__card">
 						<div class="game__card--front">
               <img src="/img/mask.png" alt="Mask">
             </div>
@@ -99,7 +99,7 @@
               <img src="/img/animal-3.jpg" alt="Mask">
             </div>
 					</div>
-          <div class="game__card turned correct">
+          <div class="game__card">
 						<div class="game__card--front">
               <img src="/img/mask.png" alt="Mask">
             </div>
