indentation fixes (tabs to spaces)

--- a/pages/game.html
+++ b/pages/game.html
@@ -1,156 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Match-Game</title>
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
-		<link rel="stylesheet" href="/css/style.min.css" />
-	</head>
-	<body>
-		<nav class="nav">
-			<ul class="navbar">
-				<li class="navbar__item">
-					<div class="navbar__item--logo">
-						<span class="logo-top">Match</span>
-						<span class="logo-bottom">Match</span>
-					</div>
-				</li>
-				<li class="navbar__item">
-					<a href="/index.html">
-						<svg>
-							<use xlink:href="/fonts/symbol-defs.svg#i-about"></use>
-						</svg>
-						<h4>About Game</h4>
-					</a>
-				</li>
-				<li class="navbar__item disabled">
-					<a href="/pages/rank.html">
-						<svg>
-							<use xlink:href="/fonts/symbol-defs.svg#i-star"></use>
-						</svg>
-						<h4>Best Score</h4>
-					</a>
-				</li>
-				<li class="navbar__item">
-					<a href="/pages/settings.html">
-						<svg>
-							<use xlink:href="/fonts/symbol-defs.svg#i-settings"></use>
-						</svg>
-						<h4>Game Settings</h4>
-					</a>
-				</li>
-				<li class="navbar__item">
-					<a href="#" class="btn btn--ghost">Stop Game</a>
-				</li>
-			</ul>
-		</nav>
-		<main class="game">
-			<div class="game__container">
-				<div class="game__timer">00:01</div>
-				<div class="game__cards">
-					<div class="game__card">
-						<div class="game__card--front">
-              <img src="/img/mask.png" alt="Mask">
-            </div>
-						<div class="game__card--back">
-              <img src="/img/animal-2.jpg" alt="Mask">
-            </div>
-					</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Match-Game</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/style.min.css" />
+  </head>
+  <body>
+    <nav class="nav">
+      <ul class="navbar">
+        <li class="navbar__item">
+          <div class="navbar__item--logo">
+            <span class="logo-top">Match</span>
+            <span class="logo-bottom">Match</span>
+          </div>
+        </li>
+        <li class="navbar__item">
+          <a href="/index.html">
+            <svg>
+              <use xlink:href="/fonts/symbol-defs.svg#i-about"></use>
+            </svg>
+            <h4>About Game</h4>
+          </a>
+        </li>
+        <li class="navbar__item disabled">
+          <a href="/pages/rank.html">
+            <svg>
+              <use xlink:href="/fonts/symbol-defs.svg#i-star"></use>
+            </svg>
+            <h4>Best Score</h4>
+          </a>
+        </li>
+        <li class="navbar__item">
+          <a href="/pages/settings.html">
+            <svg>
+              <use xlink:href="/fonts/symbol-defs.svg#i-settings"></use>
+            </svg>
+            <h4>Game Settings</h4>
+          </a>
+        </li>
+        <li class="navbar__item">
+          <a href="#" class="btn btn--ghost">Stop Game</a>
+        </li>
+      </ul>
+    </nav>
+    <main class="game">
+      <div class="game__container">
+        <div class="game__timer">00:01</div>
+        <div class="game__cards">
           <div class="game__card">
-						<div class="game__card--front">
-              <img src="/img/mask.png" alt="Mask">
+            <div class="game__card--front">
+              <img src="/img/mask.png" alt="Mask" />
             </div>
-						<div class="game__card--back">
-              <img src="/img/animal-6.jpg" alt="Mask">
+            <div class="game__card--back">
+              <img src="/img/animal-2.jpg" alt="Mask" />
             </div>
-					</div>
+          </div>
           <div class="game__card">
-						<div class="game__card--front">
-              <img src="/img/mask.png" alt="Mask">
+            <div class="game__card--front">
+              <img src="/img/mask.png" alt="Mask" />
             </div>
-						<div class="game__card--back">
-              <img src="/img/animal-3.jpg" alt="Mask">
+            <div class="game__card--back">
+              <img src="/img/animal-6.jpg" alt="Mask" />
             </div>
-					</div>
+          </div>
           <div class="game__card">
-						<div class="game__card--front">
-              <img src="/img/mask.png" alt="Mask">
+            <div class="game__card--front">
+              <img src="/img/mask.png" alt="Mask" />
             </div>
-						<div class="game__card--back">
-              <img src="/img/animal-2.jpg" alt="Mask">
+            <div class="game__card--back">
+              <img src="/img/animal-3.jpg" alt="Mask" />
             </div>
-					</div>
+          </div>
           <div class="game__card">
-						<div class="game__card--front">
-              <img src="/img/mask.png" alt="Mask">
+            <div class="game__card--front">
+              <img src="/img/mask.png" alt="Mask" />
             </div>
-						<div class="game__card--back">
-              <img src="/img/animal-1.jpg" alt="Mask">
+            <div class="game__card--back">
+              <img src="/img/animal-2.jpg" alt="Mask" />
             </div>
-					</div>
+          </div>
           <div class="game__card">
-						<div class="game__card--front">
-              <img src="/img/mask.png" alt="Mask">
+            <div class="game__card--front">
+              <img src="/img/mask.png" alt="Mask" />
             </div>
-						<div class="game__card--back">
-              <img src="/img/animal-3.jpg" alt="Mask">
+            <div class="game__card--back">
+              <img src="/img/animal-1.jpg" alt="Mask" />
             </div>
-					</div>
+          </div>
           <div class="game__card">
-						<div class="game__card--front">
-              <img src="/img/mask.png" alt="Mask">
+            <div class="game__card--front">
+              <img src="/img/mask.png" alt="Mask" />
             </div>
-						<div class="game__card--back">
-              <img src="/img/animal-2.jpg" alt="Mask">
+            <div class="game__card--back">
+              <img src="/img/animal-3.jpg" alt="Mask" />
             </div>
-					</div>
+          </div>
           <div class="game__card">
-						<div class="game__card--front">
-              <img src="/img/mask.png" alt="Mask">
+            <div class="game__card--front">
+              <img src="/img/mask.png" alt="Mask" />
             </div>
-						<div class="game__card--back">
-              <img src="/img/animal-5.jpg" alt="Mask">
+            <div class="game__card--back">
+              <img src="/img/animal-2.jpg" alt="Mask" />
             </div>
-					</div>
+          </div>
           <div class="game__card">
-						<div class="game__card--front">
-              <img src="/img/mask.png" alt="Mask">
+            <div class="game__card--front">
+              <img src="/img/mask.png" alt="Mask" />
             </div>
-						<div class="game__card--back">
-              <img src="/img/animal-5.jpg" alt="Mask">
+            <div class="game__card--back">
+              <img src="/img/animal-5.jpg" alt="Mask" />
             </div>
-					</div>
+          </div>
           <div class="game__card">
-						<div class="game__card--front">
-              <img src="/img/mask.png" alt="Mask">
+            <div class="game__card--front">
+              <img src="/img/mask.png" alt="Mask" />
             </div>
-						<div class="game__card--back">
-              <img src="/img/animal-1.jpg" alt="Mask">
+            <div class="game__card--back">
+              <img src="/img/animal-5.jpg" alt="Mask" />
             </div>
-					</div>
+          </div>
           <div class="game__card">
-						<div class="game__card--front">
-              <img src="/img/mask.png" alt="Mask">
+            <div class="game__card--front">
+              <img src="/img/mask.png" alt="Mask" />
             </div>
-						<div class="game__card--back">
-              <img src="/img/animal-6.jpg" alt="Mask">
+            <div class="game__card--back">
+              <img src="/img/animal-1.jpg" alt="Mask" />
             </div>
-					</div>
+          </div>
           <div class="game__card">
-						<div class="game__card--front">
-              <img src="/img/mask.png" alt="Mask">
+            <div class="game__card--front">
+              <img src="/img/mask.png" alt="Mask" />
             </div>
-						<div class="game__card--back">
-              <img src="/img/animal-4.jpg" alt="Mask">
+            <div class="game__card--back">
+              <img src="/img/animal-6.jpg" alt="Mask" />
             </div>
-					</div>
-				</div>
-			</div>
-		</main>
-	</body>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script src="/js/app.js"></script>
+          </div>
+          <div class="game__card">
+            <div class="game__card--front">
+              <img src="/img/mask.png" alt="Mask" />
+            </div>
+            <div class="game__card--back">
+              <img src="/img/animal-4.jpg" alt="Mask" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="/js/app.js"></script>
 </html>
