--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         <img src="/img/instr-3.png" class="instr__img"></img>
       </section>
       </main>
-      <section class="reg" id="reg"> <!-- add "active" class-name to make it visible -->
+    </main>
+    <section class="reg" id="reg"> <!-- add "active" class-name to make it visible -->
         <div class="reg__window">
           <h1 class="h1">Register new Player</h1>
           <div class="reg__form">
@@ -103,14 +104,15 @@
               <use xlink:href="/fonts/symbol-defs.svg#i-user"></use>
             </svg>
             <div class="reg__buttons">
-              <a href="#" class="btn btn--dark" id="add-user">Add User</a>
-              <a href="#" class="btn btn--light" id="cancel-reg">Cancel</a>
+              <a href="/" class="btn btn--dark disabled" id="add-user">Add User</a>
+              <a href="/" class="btn btn--light" id="cancel-reg">Cancel</a>
             </div>
           </div>
         </div>
       </section>
-    </main>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="/js/main.js"></script>
+  <script src="/js/page-navigation.js"></script>
+  <script src="/js/registration.js"></script>
 </html>
