new user registration functionality and form improvements

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </li>
         <li class="navbar__item">
           <a href="#" class="btn btn--ghost" id="register">Register New Player</a>
+          <a href="#" class="btn btn--ghost" id="start">Start Game</a>
         </li>
       </ul>
     </nav>
@@ -112,7 +113,8 @@
       </section>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="/js/main.js"></script>
   <script src="/js/page-navigation.js"></script>
-  <script src="/js/registration.js"></script>
+  <script src="/js/reg-form.js"></script>
+  <script src="/js/reg-operation.js"></script>
+  <script src="/js/game.js"></script>
 </html>
