semantic html layout improvement

--- a/index.html
+++ b/index.html
@@ -10,44 +10,44 @@
     <link rel="stylesheet" href="/css/style.min.css" />
   </head>
   <body>
-    <nav class="nav">
-      <ul class="navbar">
-        <li class="navbar__item">
+    <header class="header">
+      <nav class="navbar">
+        <div class="navbar__item">
           <div class="navbar__item--logo">
             <span class="logo-top">Match</span>
             <span class="logo-bottom">Match</span>
           </div>  
-        </li>
-        <li class="navbar__item active">
+        </div>
+        <div class="navbar__item active">
           <a href="/" id="page-home" data-value="home">
             <svg>
               <use xlink:href="/fonts/symbol-defs.svg#i-about"></use>
             </svg>
             <h4>About Game</h4>
           </a>
-        </li>
-        <li class="navbar__item">
+        </div>
+        <div class="navbar__item">
           <a href="/" id="page-rank" data-value="rank">
             <svg>
               <use xlink:href="/fonts/symbol-defs.svg#i-star"></use>
             </svg>
             <h4>Best Score</h4>
           </a>
-        </li>
-        <li class="navbar__item">
+        </div>
+        <div class="navbar__item">
           <a href="/" id="page-settings" data-value="settings">
             <svg>
               <use xlink:href="/fonts/symbol-defs.svg#i-settings"></use>
             </svg>
             <h4>Game Settings</h4>
           </a>
-        </li>
-        <li class="navbar__item">
+        </div>
+        <div class="navbar__item">
           <a href="#" class="btn btn--ghost" id="register">Register New Player</a>
           <a href="#" class="btn btn--ghost" id="start">Start Game</a>
-        </li>
-      </ul>
-    </nav>
+        </div>
+      </nav>
+    </header>
     <main id="main">
       <main class="instr">
       <h1 class="h1">How to play?</h1>
