avatar upload functionality

--- a/index.html
+++ b/index.html
@@ -102,12 +102,10 @@
               </label>
             </div>
             <div class="reg__form--avatar">
-            <label for="avatar">
-              <input type="file" id="avatar" class="reg__input" accept="image/png, image/jpg, image/jpeg">
-              <svg class="reg__form--avatar">
-                <use xlink:href="/fonts/symbol-defs.svg#i-user"></use>
-              </svg>
-            </label>
+              <label for="avatar">
+                <input type="file" id="avatar" class="reg__input" accept="image/png, image/jpg, image/jpeg">
+                <img src="/img/profile.png" id="avatar-image" alt="Profile Icon">
+              </label>
             </div>
             
             <div class="reg__buttons">
