--- a/index.html
+++ b/index.html
@@ -14,9 +14,5 @@
     <!-- Going to Be Populated by JavaScript -->
   </body>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="/js/page-navigation.js"></script>
-  <script src="/js/reg-form.js"></script>
-  <script src="/js/reg-operation.js"></script>
-  <script src="/js/game.js"></script>
+  <script type="module" src="/dist/app.js"></script>
 </html>
