async/await functions and some bug fixes (img)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
 
   <body id="app">
-    <!-- Going to Be Populated by JavaScript -->
+    <!-- Going to Be Populated -->
   </body>
 </html>
